Move vars to defaults

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,34 +1,2 @@
 ---
-statsite_apt_pkgs:
-  - "build-essential"
-  - "scons"
-statsite_name: "statsite"
-statsite_version: "0.7.1"
-statsite_package_url: "https://github.com/armon/statsite/archive/v{{statsite_version}}.tar.gz"
-statsite_install_script: "/usr/local/bin/install_statsite"
-statsite_binary_path: "/usr/local/bin/statsite{{statsite_version}}"
-statsite_etc_dir: "/etc/statsite"
-statsite_etc_sinks: "{{statsite_etc_dir}}/sinks"
-statsite_config_file: "{{statsite_etc_dir}}/{{statsite_name}}.conf"
-statsite_log_file: "/var/log/{{statsite_name}}.log"
-statsite_upstart_file: "/etc/init/{{statsite_name}}.conf"
-statsite_logrotate_file: "/etc/logrotate.d/{{statsite_name}}"
-statsite_group: "statsite"
-statsite_user: "{{statsite_group}}"
-
-#
-# Config
-#
-
-# [statsite]
-statsite_port: 8125
-statsite_udp_port: 8125
-statsite_log_level: "WARN"
-statsite_flush_interval: 10
-statsite_timer_eps: 0.01
-statsite_set_eps: 0.02
-statsite_stream_cmd: ""
-statsite_daemonize: 0
-statsite_binary_stream: false
-statsite_pid_dir: "/var/run/statsite"
-statsite_pidfile: "{{statsite_pid_dir}}/{{statsite_name}}.pid"
+# vars file for statsite
