Hyphenated binary name

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ statsite_name: "statsite"
 statsite_version: "0.7.1"
 statsite_package_url: "https://github.com/armon/statsite/archive/v{{statsite_version}}.tar.gz"
 statsite_install_script: "/usr/local/bin/install_statsite"
-statsite_binary_path: "/usr/local/bin/{{statsite_name}}{{statsite_version}}"
+statsite_binary_path: "/usr/local/bin/{{statsite_name}}-{{statsite_version}}"
 statsite_etc_dir: "/etc/statsite"
 statsite_etc_sinks: "{{statsite_etc_dir}}/sinks"
 statsite_config_file: "{{statsite_etc_dir}}/{{statsite_name}}.conf"
