--- a/role.yml
+++ b/role.yml
@@ -4,6 +4,7 @@
   hosts: all
   sudo: yes
   vars_files:
+    - "defaults/main.yml"
     - "vars/main.yml"
   tasks:
     - include: "tasks/main.yml"
