--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,8 +11,10 @@ statsite_binary_path: "/usr/local/bin/{{statsite_name}}-{{statsite_version}}"
 statsite_etc_dir: "/etc/statsite"
 statsite_etc_sinks: "{{statsite_etc_dir}}/sinks"
 statsite_config_file: "{{statsite_etc_dir}}/{{statsite_name}}.conf"
-statsite_log_file: "/var/log/{{statsite_name}}.log"
+statsite_log_dir: "/var/log/statsite"
+statsite_log_file: "{{statsite_log_dir}}/{{statsite_name}}.log"
 statsite_upstart_file: "/etc/init/{{statsite_name}}.conf"
+statsite_init_file: "/etc/init.d/{{statsite_name}}"
 statsite_logrotate_file: "/etc/logrotate.d/{{statsite_name}}"
 statsite_group: "statsite"
 statsite_user: "statsite"
@@ -29,7 +31,7 @@ statsite_flush_interval: 10
 statsite_timer_eps: 0.01
 statsite_set_eps: 0.02
 statsite_stream_cmd: ""
-statsite_daemonize: 0
+statsite_daemonize: 1
 statsite_binary_stream: false
 statsite_pid_dir: "/var/run/statsite"
 statsite_pidfile: "{{statsite_pid_dir}}/{{statsite_name}}.pid"
