--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
----
-language: python
-python: "2.7"
+language: ruby
+rvm:
+  - 2.2.3
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq python-apt python-pycurl
+  - "curl -fsSL https://get.docker.com/ | sh"
+  - sudo usermod -aG docker travis
 install:
-  - pip install ansible
+  - bundle install --jobs=4
 script:
-  - echo "localhost" > inventory
-  - ansible-playbook -i inventory --syntax-check --list-tasks role.yml
+  - bundle exec kitchen test
